siduxcc (0.10.13) unstable; urgency=low

  * sidux-hermes-kde4 added
  * cli: addSources function updated
  * siduxcc_hermes to hermes_kde3 moved
  * hermes-kde4 to hermes_kde4 moved
  * hermes_gkt2 folder added
  * disconnected icon to icon folder moved
  * manpage added, not included in the debian yet 
  * another brick in the wall 

 -- Fabian Wuertz <xadras@sidux.com>  Wed, 25 Jun 2008 11:29:22 +0200

siduxcc (0.10.12) unstable; urgency=low

  * hermes-kde: exec problems solved

 -- Fabian Wuertz <xadras@sidux.com>  Sun, 22 Jun 2008 02:48:27 +0200

siduxcc (0.10.11) unstable; urgency=low

  * kde: network: card -> i18n
  * gtk: desktop: (GTK) added
  * cli: fDone added
  * gtk: typo

 -- Fabian Wuertz <xadras@sidux.com>  Fri, 20 Jun 2008 18:05:26 +0200

siduxcc (0.10.10) unstable; urgency=low

  * cli: typos

 -- Fabian Wuertz <xadras@sidux.com>  Mon, 09 Jun 2008 13:13:07 +0200

siduxcc (0.10.9) unstable; urgency=low

  [ Fabian Wuertz ]
  * gtk2: about dialog improved

  [ Stefan Lippers-Hollmann ]
  * bump standards version to 3.8.0, no changes necessary.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 08 Jun 2008 19:22:55 +0200

siduxcc (0.10.8) unstable; urgency=low

  * sidux-hermes-gtk2.desktop added
  * gcc-4.3 problems solved
  * some compile warnings solved

 -- Fabian Wuertz <xadras@sidux.com>  Thu, 05 Jun 2008 14:29:45 +0200

siduxcc (0.10.7) unstable; urgency=low

  * ruby dependencies removed

 -- Fabian Wuertz <xadras@sidux.com>  Tue, 03 Jun 2008 23:47:20 +0200

siduxcc (0.10.6) unstable; urgency=low

  * gtk2: sidux-hermes-gtk2 added
  * debian: gtk2: python dependcies added

 -- Fabian Wuertz <xadras@sidux.com>  Tue, 03 Jun 2008 11:26:07 +0200

siduxcc (0.10.5) unstable; urgency=low

  * ruby file moved to /usr/bin

 -- Fabian Wuertz <xadras@sidux.com>  Mon, 02 Jun 2008 11:35:39 +0200

siduxcc (0.10.4) unstable; urgency=low

  [ Fabian Wuertz ]
  * gtk icon-problem/dependency problem fixed

  [ Stefan Lippers-Hollmann ]