@@ -1,9 +1,9 @@
 doc
-hermes_gtk2
-hermes_kde3
 icons
 libsiduxcc
 po
+hermes_gtk2
+hermes_kde3
 siduxcc
 siduxcc_gtk2
 siduxcc_kde3
